
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#6215] Fix issues with derivative resources and non-standard manager themes
- [#6237] Add ability to sort users by active status in mgr grid
- [#6197] Refresh old and new context caches when moving Resource
- Update to xPDO 2.2.1-pl
- [#6080] Fix revert to default properties on Source Properties grid
- [#6204] Fix issue where multiple languages could not be loaded per page in the lexicon
- [#6196] Ensure that MODx.Browser view updates when changing a media source from dropdown in tree
- [#6198] Fix issue with saving user groups on a new user that caused duplicate role saving
- [#6159] Implement OnBeforeUserActivate, OnUserActivate, OnBeforeUserDeactivate, and OnUserDeactivate events
- [#6063] Add extra settings and checks to allow for better handling of manager CSS/JS minification on servers that do not allow DOCUMENT_ROOT access
- [#6147] Fix element processors not firing proper events and passing wrong variables to plugins.
- [#6060] Fix issue where resources were getting class_key of modResource rather than modDocument
- [#6030] Fix issue where alt attribute was duplicated on image output renders
- [#6122] Clarify text for removing a dashboard widget from a dashboard
- [#6124] Fix issue where element associations of various elements were not saved in respective create processors
- [#6145] Allow sorting of plugin events by enabled flag
- [#6065] Fix issue with missing paths in certain environments for new installs in setup
- Fix provider select window width in Chrome/Windows
- [#6081] Fix issue in modFileMediaSource that prevented source properties from being read in certain processors
- [#5141] Remove dependency for navbar.tpl in manager templates
- [#5760] Fix memberof filter if user is not logged in
- [#6090] Fix issue with removing Content Types in 2.2-rc1